K8S/personalfinancesapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-finances-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-finances-api
  template:
    metadata:
      labels:
        app: personal-finances-api
    spec:
      containers:
      - name: personal-finances-api
        image: igorsmedeiros/personal-finances-api:v1.0
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: personal-finances-api
spec:
  selector:
    app: personal-finances-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30000
  type: NodePort
