K8S/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-finances-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: personalfinances.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-finances-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: personal-finances-api
                port:
                  number: 80
